engine/Shopware/Themes/Frontend/Responsive/frontend/_public/src/less/_modules/confirm.less
.confirm--content {

    & > .alert {
        .unitize-margin(8, 0, 0, 0);
    }

    .body--revocation {
        font-weight: bold;
    }

    .panel {
        .unitize-margin(8, 0);
        .border-radius();
    }

    .product--table {
        .panel--body {
            background: @panel-bg;
            color: @text-color;
            padding-bottom: 0;
        }

        .table--tr,
        .table--media img {
            border-color: @panel-border;
        }

        .basket--footer {
            .unitize-margin(0, -10);
            background: @gray-light;
            border-color: @panel-border;

            .aggregation--list {
                margin: 0;
                background: transparent;
                border-color: @border-color;
            }
        }

        .table--actions {
            .unitize-padding(25, 0, 0, 0);
        }
    }

    .panel--actions {
        .unitize-margin(16, 0, 0, 0);
        padding: 0;
    }

    .column--unit-price {
        display: none
    }

    .table--tr .column--tax-price {
        .unitize-padding(0, 0, 9, 10);
    }

    .agb_info, .list--checkbox {
        .unitize-margin(0, 0, 21, 0);
    }

    .list--checkbox {
        .column--checkbox {
            width: 10%;
        }
        .column--label {
            width: 90%;
        }
    }

    // Add product using the sku
    .add-product--form {
        .unitize-margin(12, 0);
    }

    .add-voucher--form,
    .add-product--form {
        .clearfix();
    }

    .add-product--field,
    .add-voucher--field {
        .border-radius-multi(3px, 0, 0, 3px);
        width: 90%;
    }

    .add-product--button,
    .add-voucher--button {
        .unitize-padding(5, 0);
        .border-radius-multi(0, 3px, 3px, 0);
        width: 10%;
        text-align: center;
    }

    .user-comment--field {
        width: 100%;
    }

    .table--actions .btn {
        width: 100%;
    }

    .table-footer--country-notice {
        .unitize-margin(11, 0, 0, 0);
    }
    .table--aggregation {
        display: none
    }

    .js--loading {
        .unitize-width(24);
        .unitize-height(24);
        .border-radius(100%);
        .unitize-margin(0, 10, 0, 0);
        .animation(keyframe--spin 1s linear infinite);
        border: 2px solid @border-color;
        border-top: 2px solid darken(@border-color, 50%);
        display: block;
        position: absolute;
        left: 50%;
    }
}

@media screen and (min-width: @phoneLandscapeViewportWidth) {
    .confirm--content {

        .product--table {
            .column--quantity { width: 26%; }
            .column--total-price { width: 28.5%; }
            .column--tax-price {
                .unitize(10, 16, padding-right);
                float: left;
                width: 32%;
            }
            .row--rebate,
            .row--premium-product,
            .row--voucher {
                .column--tax-price {
                    margin-left: 39.5%;
                }
            }
        }
    }
}

@media screen and (min-width: @tabletViewportWidth) {

    .is--act-shippingPayment .basket--footer {
        .border-radius();
    }

    .confirm--content {

        & > .alert {
            .unitize-margin(20, 0, 0, 0);
        }

        .panel {
            .unitize-margin(20, 0);
        }

        .product--table {

            .table--header {
                .unitize-margin(-14, -20, 10, -20);
                .unitize-padding(14, 20, 10, 20);
                background: @panel-table-header-bg;
                border-color: @panel-border;

                .panel--th {
                    .unitize-padding(5, 10, 9, 10);
                    color: @panel-table-header-color;
                }
            }

            .column--product { width: 47%; }
            .column--quantity { width: 11% }
            .column--tax-price {
                .unitize-padding(10, 10);
                width: 17%
            }
            .column--total-price { width: 17% }
            .column--actions { width: 7.5% }


            .is--last-row {
                border-bottom: 0 none;
            }

            .row--product .column--tax-price {
                .unitize(42, 16, line-height);
                .unitize(26, 16, padding-top);
            }

            .panel--body {
                .unitize(20, 16, padding-bottom);
            }

            .table--actions {
                .unitize-padding(10, 0, 0, 0);
            }

            .basket--footer {
                .unitize-margin(0, -20, -20, -20);
            }
        }

        .product--delivery {
            float: none;
        }

        .product--table .row--rebate .column--tax-price,
        .product--table .row--premium-product .column--tax-price,
        .product--table .row--voucher .column--tax-price {
            .unitize(21 ,16, padding-top);
            margin-left: 11%;
        }

        .product--table .row--rebate .column--total-price,
        .product--table .row--premium-product .column--total-price,
        .product--table .row--voucher .column--total-price {
            margin-left: 0;
        }

        .product--table .column--tax-price {
            .tax-price--label {
                .unitize(12, 16, margin-bottom);
                margin: 0;
            }
        }

        .row--premium-product .column--product,
        .row--rebate .column--product {
            width: 58%;

            .column--image { width: 16.2%; };
        }

        .product--table .row--premium-product .column--tax-price,
        .product--table .row--rebate .column--tax-price {
            margin-left: 0;
        }

        // Terms of services box
        .tos--panel {

            .column--checkbox {
                .unitize(12, 16, margin-right);
                width: auto;
            }

            .column--label {
                width: 95%;
                display: block;
            }
        }

        // Personal information panels like billing and shipping address
        .panel--group {

            .panel--body {
                position: static;
            }

            .panel {
                .unitize-height(290);
                margin: 0 2% 0 0;
                width: 32%;
                position: relative;

                &:last-child {
                    margin: 0;
                }
            }

            .panel--actions {
                .clearfix();
                .unitize(20, 16, bottom);
                position: absolute;

                .btn {
                    float: left;
                }
            }
        }

        // Additional features
        .additional--features {
            .feature--group {
                width: 40%;
                margin: 0 2.5% 0 0;
            }

            .feature--user-comment {
                width: 55%;
                margin: 0 0 0 2.5%;
            }

            .user-comment--field {
                .unitize-height(95);
            }
        }

        // Aggregation
        .product--table .aggregation--list {
            float: right;
            padding-right: 10.4%;
        }

        .main--actions .btn {
            .clearfix();
            width: auto;
            float: right;
        }

        .relevant--info {
            display: block;
        }
    }
}

@media screen and (min-width: @tabletLandscapeViewportWidth) {
    .confirm--content {
        .product--table .row--premium-product .column--image,
        .product--table .row--rebate .column--image {
            width: 13%;
        }

        .product--table .aggregation--list {
            padding-right: 10%;
        }
    }
}

@media screen and (min-width: @desktopViewportWidth) {
    .confirm--content {
        & > .alert {
            .unitize-margin(45, 0, 0, 0);
        }

        .panel {
            .unitize-margin(45, 0);
        }

        .product--table {
            .row--premium-product .column--product,
            .row--rebate .column--product {
                width: 58%;
            }
            .row--premium-product .column--image,
            .row--rebate .column--image {
                width: 11.3%;
            }
            .row--premium-product .column--tax-price,
            .row--rebate .column--tax-price {
                margin-left: 0;
            }
        }

        .product--table .aggregation--list {
            padding-right: 9.6%;
        }
    }
}

